fix contrast for buttons and tags go back to colors in conf switch hex to variables from DSFR for ecospheres use hex colors in strings for logistique better fallback

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,6 +16,8 @@
   --blue-france-850-200: var(--blue-cumulus-850-200);
   /* toastify */
   --toastify-color-success: #1f8d49; /* --success-main-525 (unavailable to date) */
+  /* DSFR contrast fix */
+  --blue-cumulus-sun-368-moon-732-hover--fix: #4170dc;
 }
 
 @font-face {
@@ -110,6 +112,17 @@ textarea {
 
 .datagouv-components h1 {
   margin-bottom: 1.5rem;
+}
+
+/* Button color contrast fix */
+.fr-btn:not(
+    .fr-btn--secondary,
+    .fr-btn--tertiary,
+    .fr-btn--tertiary-no-outline,
+    a.fr-btn
+  ),
+.fr-pagination__link[aria-current] {
+  --hover: var(--blue-cumulus-sun-368-moon-732-hover--fix);
 }
 
 /* FIXME */
